Resolves: tdf#121752 let scroll wheel change active notebook tab

Change-Id: If8437346a58ea14266f11293b94082740303e5a9